# mwAudioAutoChop-Cpp

./: .clang-tidy  .gitignore  BACKLOG.archive.md  BACKLOG.md  CMakeLists.txt  PROJECT_SPEC.md  README.md
.github/workflows/: ci.yml
docs/: deviations.md  invariants.md  known-failing-tests.md  m-i-18-followups.md  m14-scope.md  orchestrator-handoff.md  tier2-rebase-plan.md
docs/decisions/: expected-api.md  parser-errors.md
src/: main.cpp
src/cli/: .gitkeep
src/core/: .gitkeep  alignment_result.hpp  analysis.cpp  analysis.hpp  analysis_result.hpp  audio_buffer.cpp  audio_buffer.hpp  audio_file.cpp  audio_file.hpp  audio_info.hpp  core.hpp  correlation.cpp  correlation.hpp  drift_model.cpp  music_detection.cpp  music_detection.hpp  split_point.hpp  test_deps.cpp  verbose.hpp
src/modes/: .gitkeep  blind_mode.cpp  blind_mode.hpp  reaper_export.cpp  reaper_export.hpp  reference_mode.cpp  reference_mode.hpp
src/tui/: .gitkeep  app.cpp  app.hpp  waveform.cpp  waveform.hpp
tests/: test_analysis.cpp  test_audio_buffer.cpp  test_audio_file.cpp  test_basic.cpp  test_blind_mode.cpp  test_correlation.cpp  test_drift_model.cpp  test_integration.cpp  test_lossless.cpp  test_music_detection.cpp  test_reference_mode.cpp
tests/fixtures/: CMakeLists.txt  README.md
tests/fixtures/c-1/: ESCALATION.md
tests/fixtures/malformed/: CMakeLists.txt  README.md  generate.cpp  manifest.txt
tests/fixtures/ref_v1/: CMakeLists.txt  README.md  generate.cpp
tests/fixtures/rf64/: CMakeLists.txt  README.md  generate.cpp
tests/fixtures/waveext/: CMakeLists.txt  README.md  generate.cpp
